muffy/src/snapshots/muffy__render__tests__text__render.snap
---
source: muffy/src/render.rs
expression: "str::from_utf8(&string).unwrap()"
---
https://foo.com/
	a 
		ERROR	unknown tag "foo"
