muffy/src/snapshots/muffy__render__tests__text__render_data_urls_without_bodies.snap
---
source: muffy/src/render.rs
expression: "str::from_utf8(&string).unwrap()"
---
data:image/svg+xml
	image href="data:image/svg+xml"
		✅ 200 OK	data:image/svg+xml	0 ms
		❌ unknown tag "foo"
