muffy/src/snapshots/muffy__render__tests__text__render_error.snap
---
source: muffy/src/render.rs
expression: "str::from_utf8(&string).unwrap()"
---
https://foo.com/
	foo 
		❌ unknown tag "foo"
		❌ invalid attributes: bar (conflicting), invalid children: baz (misplaced), missing attributes: qux, missing children: quux
