muffy/src/snapshots/muffy__render__tests__text__render_truncated_data_urls.snap
---
source: muffy/src/render.rs
expression: "str::from_utf8(&string).unwrap()"
---
data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'><imag...
	image href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcm..."
		✅ valid URL
	foo 
		❌ unknown tag "foo"
