muffy/src/snapshots/muffy__render__tests__text__render_with_verbose_option.snap
---
source: muffy/src/render.rs
expression: "str::from_utf8(&string).unwrap()"
---
https://foo.com/
	a 
		200 OK	https://foo.com/	0 ms
		ERROR	unknown tag "foo"
